Fix width overflow

--- a/style.css
+++ b/style.css
@@ -13,11 +13,6 @@ button,
     background-color: #e5e7eb;
 }
 
-body {
-    /* overflow-x: hidden; */
-    width: 100%;
-}
-
 
 /*
 **********************************************************************
@@ -30,7 +25,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
     height: 5%;
     padding: 20px 10%;
 }
@@ -77,4 +72,21 @@ a {
     height: 100px;
     border-radius: 10%;
     border: solid #3882f6 3px;
+}
+
+/*
+**********************************************************************
+
+                    Styles for section elements
+
+**********************************************************************
+*/
+
+section {
+    /* width: 100%; */
+    height: 5%;
+    padding: 20px 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
